# smart_scraper

./: Cargo.toml  README.md  env.sample  run.sh
src/: browsergrab.rs  cache.rs  cleantext.rs  expand_path.rs  is_truthy.rs  main.rs  page_data.rs  params.rs  routes.rs  stats.rs  string_patterns.rs  string_utils.rs
