[package]
name = "textsurfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
html5ever = "0.26.0"
redis = "0.23.3"
regex = "1.10.2"
reqwest = "0.11.22"
scraper = "0.18.1"
select = "0.6.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
