[package]
name = "textsurfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
base64 = "0.21.5"
chrono = "0.4.31"
html5ever = "0.26.0"
redis = "0.23.3"
reqwest = "0.11.22"
scraper = "0.18.1"
select = "0.6.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace", "set-header", "timeout", "limit", "cors"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
futures = "0.3.29"
dotenv = "0.15.0"
serde_with = "3.4.0"
simple-string-patterns = "0.3.14"
string-patterns = "0.3.8"
